<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_profile_login">

    <TextView
        android:id="@+id/logged_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="120dp"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/logged_out"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/signUpB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="28dp"
        android:onClick="signUpMethod"
        android:text="@string/action_sign_up"
        app:layout_constraintStart_toStartOf="@+id/logged_out"
        app:layout_constraintTop_toBottomOf="@+id/logged_out" />

    <Button
        android:id="@+id/logInB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="28dp"
        android:onClick="logInMethod"
        android:text="@string/action_sign_in_short"
        app:layout_constraintEnd_toEndOf="@+id/logged_out"
        app:layout_constraintTop_toBottomOf="@+id/logged_out" />

</android.support.constraint.ConstraintLayout>